--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -85,6 +85,11 @@ textarea {
   margin-top: 3px;
 }
 
+form > div >p {
+  color: azure;
+
+}
+
 .input_section > form > .input > label {
   width: 90%;
   background-color: rgb(22, 1, 22);
